API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

25-May-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added utilfuns/utilxml.cpp and test/xmltest which
		include basic xml utility classes
	Added comparison operators to SWBuf so it plays
		nicely with stl containers

19-Feb-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added utilfuns/swbuf.cpp and tests/swbuftest
	Fixed make system to include osisrtf and osisplain
	Started HUGE task of moving all char **buf over
		to SWBuf &buf

06-Feb-2003	Joachim Ansorg <joachim@ansorgs.de>
	Added ro.conf (Romanian) in locales.d

14-Jan-2003	Joachim Ansorg <joachim@ansorgs.de>
	Added strip filter for the red letter words so users can
		turn it off
	Worked a bit on locales.d/de.conf to include some abbrevs

10-Jan-2003	Terry Biggs <tbiggs@infinet.com>
	Added new osisstrongs and osismorph support to gbfhtml*.

08-Jan-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added new osisstrongs and osismorph option filters.
	Hacked gbfrtf to support, for now:
		the osis <w> tag,
		Removed OSIS <note>...</note>,
		Removed any empty strongs tags for the article.

19-Dec-2002	Joachim Ansorg <joachim@ansorgs.de>
	Removed old russian book locale file, because it wasn't
		working in Linux AND Windows
	Added book locale files (cp1251 and koi8-r) submitted by
		Pavlo Bohmat bohm@ukr.net to support Windows
		and Linux.

30-Nov-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added Finnish locale files contributed by Tero
		Favorin <tero at favorin dot com>

27-Nov-2002     Joachim Ansorg <joachim@ansorgs.de>
	Worked on Swig bindings. They work now with latest CVS.

25-Nov-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added Chris' ThMLVariants option filter to SWMgr

21-Nov-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added support to ListKey to test for inclusion in
		set. eg. listKey.setText("mat 2:2") will set
		listKey.Error() to true if Matthew 2:2 is not
		in the listkey set.  listKey will also be set